--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^3.1.6",
     "@types/node": "22.10.5",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
@@ -24,6 +25,7 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "tailwindcss": "3.4.17",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "zod": "^3.22.2"
   }
 }
