--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^3.1.6",
     "@types/node": "22.10.5",
     "@types/react": "19.0.3",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "easymde": "^2.18.0",
     "eslint": "9.17.0",
