--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@radix-ui/themes": "^3.1.6",
     "@tanstack/react-query": "^5.64.2",
     "@types/node": "22.10.5",
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
@@ -28,21 +26,23 @@
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "postcss": "8.4.49",
-    "prisma": "^5.3.1",
+    "prisma": "^5.22.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^9.0.1",
     "react-simplemde-editor": "^5.2.0",
     "recharts": "^2.15.1",
     "tailwindcss": "3.4.17",
-    "typescript": "5.7.2",
+    "typescript": "^5.7.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
 }
